--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </header>
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ontop-all" id="myskickynavbar1">
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark ontop-all" id="myskickynavbar1">
     <div class="container">
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -96,7 +96,7 @@
         </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
 
   <!--    ////////////////////// Carousel ///////////////////////////////   -->
