--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+  
+  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+    Perkenalkan Saya <br/>
+    Virgin Shofwa <br/>
+    WhatsApp : 089674198193
+  </div>
 
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
