--- a/index.html
+++ b/index.html
@@ -138,9 +138,18 @@
   </div>
   
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+    <br/>
     Perkenalkan Saya <br/>
     Virgin Shofwa <br/>
-    WhatsApp : 089674198193
+    WhatsApp : 089674198193 <br/>
+    <br/>
+    InsyaAllah Saya akan jelaskan sebuah <br/>
+    peluang bisnis yang telah dijalankan & mensukseskan ratusan bahkan jutaan orang <br/>
+    tersebar di seluruh wilayah Indonesia dan dunia, dan orang sukses selanjutnya adalah Anda. <br/>
+    <br/>
+    Bersama TEAM yang HANDAL, <br/>
+    <br/>
+    Kami akan MEMBIMBING ANDA from ZERO to HERO SAMPAI SUKSES di bisnis Milagros.
   </div>
 
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
