--- a/index.html
+++ b/index.html
@@ -149,7 +149,17 @@
     <br/>
     Bersama TEAM yang HANDAL, <br/>
     <br/>
-    Kami akan MEMBIMBING ANDA from ZERO to HERO SAMPAI SUKSES di bisnis Milagros.
+    Kami akan MEMBIMBING ANDA from ZERO to HERO SAMPAI SUKSES di bisnis Milagros. 
+    <br/>
+  </div>
+  
+  <div style="background-color: #; border: 0px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+    <h5>Perlu Anda ketahui…</h5> <br/>
+    AIR ALKALI Sangat baik bagi tubuh <br/>
+    kandungannya dapat meningkatkan kemampuan <br/>
+    sel-sel darah putih dalam memerangi kuman sehingga <br/>
+    mempercepat penyembuhan berbagai macam penyakit dan gangguan kesehatan, <br/>
+    serta menetralkan asam dalam tubuh. <br/>
   </div>
 
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
