--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
     <br/>
     Bersama TEAM yang HANDAL, <br/>
     <br/>
-    Kami akan MEMBIMBING ANDA from ZERO to HERO SAMPAI SUKSES di bisnis Milagros. 
+    Kami akan MEMBIMBING ANDA from ZERO to HERO SAMPAI SUKSES di bisnis Milagros. <br/>
     <br/>
   </div>
   
-  <div style="background-color: #; border: 0px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+  <div style="background-color: #7FFFD4; border: 0px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
     <h5>Perlu Anda ketahui…</h5> <br/>
     AIR ALKALI Sangat baik bagi tubuh <br/>
     kandungannya dapat meningkatkan kemampuan <br/>
