--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     serta menetralkan asam dalam tubuh. <br/>
   </div>
   
-  <div class="arrow_box; text-align: center;"><h5>Simak VIDEO berikut</h5></div>
+  <div class="arrow_box"><h5 style="text-align: center">Simak VIDEO berikut</h5></div>
 
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
