--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     <br/>
   </div>
   
-  <div style="background-color: #7FFFD4; border: 0px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
-    <h5>Perlu Anda ketahui…</h5> <br/>
+  <div style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
+    <h5>Perlu Anda ketahui…</h5>
     AIR ALKALI Sangat baik bagi tubuh <br/>
     kandungannya dapat meningkatkan kemampuan <br/>
     sel-sel darah putih dalam memerangi kuman sehingga <br/>
