--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
   </div>
   
   <div class="arrow_box"><h5 style="text-align: center">Simak VIDEO berikut</h5></div>
+  
+  <video width="640" height="480" src="https://youtu.be/RQNBSB4_ZVI" controls/>
 
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
