--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   
   <div class="arrow_box"><h5 style="text-align: center">Simak VIDEO berikut</h5></div>
   
-  <video width="640" height="480" src="https://youtu.be/RQNBSB4_ZVI" controls/>
+  <video width="180" height="360" align="center" src="https://youtu.be/RQNBSB4_ZVI" controls/>
 
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
