--- a/index.html
+++ b/index.html
@@ -164,8 +164,10 @@
   
   <div class="arrow_box"><h5 style="text-align: center">Simak VIDEO berikut</h5></div>
   
-
-
+  <div class="center">
+    <video width="360" height="240" src="https://youtu.be/RQNBSB4_ZVI" controls/>
+  </div>
+    
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
   <!-- Icons Grid -->
