--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
   
   <div class="arrow_box"><h5 style="text-align: center">Simak VIDEO berikut</h5></div>
   
-  <div class="center">
-    <video width="360" height="240" src="https://youtu.be/RQNBSB4_ZVI" controls/>
+  <div class="text-center"> 
+    <iframe width="360" height="240" src="https://youtu.be/RQNBSB4_ZVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
     
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
