--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <div class="arrow_box"><h5 style="text-align: center">Simak VIDEO berikut</h5></div>
   
   <div class="text-center"> 
-    <iframe width="360" height="240" src="https://youtu.be/RQNBSB4_ZVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="360" height="240" src="https://www.youtube.com/embed/RQNBSB4_ZVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
     
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
