--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@
   <div class="text-center">
     <img class="d-block w-100 embed-responsive" src="https://lh6.googleusercontent.com/dXOqOUwupxPVMSBOGT2W-hMYmgUDyEsfKGxT_xdT304KzsD4VCnLVdAPkBd7TYSPGribtCtmdEtFlW3r-VjeJLriaOzTPuXhQhQUeefquyU1zebCGWA=w371" alt="milagros-botol">
   </div>
+  
+    <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: justify; width: auto;">
+    <br/>
+      MILAGROS Super Stable Alkaline dengan pH 9.8; <br/>
+      Strength Anti-oxidant (-350mV); Powerful Scalar Energy; <br/>
+      Ionized Mineral Organic Form (TDS 40ppm); <br/>
+      dan diperkaya oksigen dengan molekul air (5-6) yang sangat mudah diserap oleh tubuh. <br/>
+    <br/>
+  </div>
     
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
