--- a/index.html
+++ b/index.html
@@ -180,12 +180,19 @@
   </div>
   
     <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: justify; width: auto;">
+      MILAGROS Super Stable Alkaline dengan pH 9.8;
+      Strength Anti-oxidant (-350mV); Powerful Scalar Energy;
+      Ionized Mineral Organic Form (TDS 40ppm);
+      dan diperkaya oksigen dengan molekul air (5-6) yang sangat mudah diserap oleh tubuh.
     <br/>
-      MILAGROS Super Stable Alkaline dengan pH 9.8; <br/>
-      Strength Anti-oxidant (-350mV); Powerful Scalar Energy; <br/>
-      Ionized Mineral Organic Form (TDS 40ppm); <br/>
-      dan diperkaya oksigen dengan molekul air (5-6) yang sangat mudah diserap oleh tubuh. <br/>
+      MILAGROS mampu meningkatkan power, mengeluarkan racun, menurunkan dan menangkal radikal bebas, 
+      meningkatkan kadar basa, serta membantu meningkatkan kadar oksigen dalam tubuh kita, 
+      sehingga mengkonsumsi MILAGROS setiap hari dapat menjaga kesehatan, mengoptimalkan fungsi organ tubuh, mempercepat proses penyembuhan, 
+      mencegah penuaan dini dan menjaga berat badan ideal.
     <br/>
+      MILAGROS dapat digunakan sebagai alat bantu untuk terapi penyembuhan beberapa penyakit, 
+      antara lain: Kolesterol, Stroke, Darah Tinggi, Rematik, Jantung, Asam Urat, Diabetes, 
+      dan masih banyak lagi.
   </div>
     
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
