--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
     <img class="d-block w-100 embed-responsive" src="https://lh6.googleusercontent.com/dXOqOUwupxPVMSBOGT2W-hMYmgUDyEsfKGxT_xdT304KzsD4VCnLVdAPkBd7TYSPGribtCtmdEtFlW3r-VjeJLriaOzTPuXhQhQUeefquyU1zebCGWA=w371" alt="milagros-botol">
   </div>
   
-    <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: justify; width: auto;">
+    <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
       MILAGROS Super Stable Alkaline dengan pH 9.8;
       Strength Anti-oxidant (-350mV); Powerful Scalar Energy;
       Ionized Mineral Organic Form (TDS 40ppm);
-      dan diperkaya oksigen dengan molekul air (5-6) yang sangat mudah diserap oleh tubuh.
+      dan diperkaya oksigen dengan molekul air (5-6) yang sangat mudah diserap oleh tubuh. <br/>
     <br/>
       MILAGROS mampu meningkatkan power, mengeluarkan racun, menurunkan dan menangkal radikal bebas, 
       meningkatkan kadar basa, serta membantu meningkatkan kadar oksigen dalam tubuh kita, 
       sehingga mengkonsumsi MILAGROS setiap hari dapat menjaga kesehatan, mengoptimalkan fungsi organ tubuh, mempercepat proses penyembuhan, 
-      mencegah penuaan dini dan menjaga berat badan ideal.
+      mencegah penuaan dini dan menjaga berat badan ideal. <br/>
     <br/>
       MILAGROS dapat digunakan sebagai alat bantu untuk terapi penyembuhan beberapa penyakit, 
       antara lain: Kolesterol, Stroke, Darah Tinggi, Rematik, Jantung, Asam Urat, Diabetes, 
