--- a/index.html
+++ b/index.html
@@ -194,10 +194,46 @@
       antara lain: Kolesterol, Stroke, Darah Tinggi, Rematik, Jantung, Asam Urat, Diabetes, 
       dan masih banyak lagi.
   </div>
+  
+  <div style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+    <h5>Manfaat Milagros</h5>
+  </div>
+  
+  <section class="features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <p class="lead mb-0">Memperlancar Sistem Pencernaan</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <p class="lead mb-0">Menyeimbangkan Kadar Gula Darah</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <p class="lead mb-0">Mencegah Kanker, Tumor, Osteoporosis</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
     
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
   <!-- Icons Grid -->
+  <!--
   <section class="features-icons bg-light text-center">
     <div class="container">
       <div class="row">
@@ -231,6 +267,7 @@
       </div>
     </div>
   </section>
+  -->
 
   <!--    //////////////////////////// Image Showcases ////////////////////////////////   -->
   <section class="showcase">
