--- a/index.html
+++ b/index.html
@@ -309,6 +309,14 @@
       </div>
     </div>
   </section>
+  
+  <div class="text-center">
+    <img class="d-block w-100 embed-responsive" src="https://lh5.googleusercontent.com/Rz2Jv-mIUW9jxHVOlHYSLgc0KoLL4fybinFKi5Qjcm-Jz8dKW7nHK_T6jTbtTZzLDZ_SSIv_=w371" alt="manfaat-milagros">
+  </div>
+  
+  <div style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+    <h5>LEGALITAS PRODUK</h5>
+  </div>
     
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
