--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>MyLandingPage1</title>
+  <title>Landing Page Milagros</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -316,6 +316,10 @@
   
   <div style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
     <h5>LEGALITAS PRODUK</h5>
+  </div>
+  
+  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+    <h6>Sertifikat Manajemen Mutu</h6>
   </div>
     
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
