--- a/index.html
+++ b/index.html
@@ -318,9 +318,10 @@
     <h5>LEGALITAS PRODUK</h5>
   </div>
   
-  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
-    <h6>Sertifikat Manajemen Mutu</h6>
-  </div>
+  <div class="arrow_box_transparent"><h6 style="text-align: center">Sertifikat Manajemen Mutu</h6></div>
+  <br/>
+  <br/>
+  <br/>
     
   <!--    //////////////////////////// Icons Grids ////////////////////////////////   -->
 
