--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="col-xl-9 mx-auto">
           <h5 class="mb-5">
             <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 5px; text-align: center; width: auto;">
-             MILAGROS Air Ajaib
+             MILAGROS Air Alkali Ajaib
             </div>
           </h5>
         </div>
@@ -318,7 +318,7 @@
     <h5>LEGALITAS PRODUK</h5>
   </div>
   
-  <div class="arrow_box_transparent"><h6 style="text-align: center">Sertifikat Manajemen Mutu</h6></div>
+  <div class="arrow_box"><h6 style="text-align: center">Sertifikat Manajemen Mutu</h6></div>
   <br/>
   <br/>
   <br/>
