--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     <h5>LEGALITAS PRODUK</h5>
   </div>
   
-  <div class="arrow_box"><h6 style="text-align: center">Sertifikat Manajemen Mutu</h6></div>
+  <div class="arrow_box_transparent"><h6 style="text-align: center">Sertifikat Manajemen Mutu</h6></div>
   <br/>
   <br/>
   <br/>
