--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh3.googleusercontent.com/P_iJ0RQITaGi2w1jG2Dgh6En9oeGVc4381-ljKYuq_OUuxi2dtATaf3_lVog846UNMCHhCWC=w371);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Fully Responsive Design</h2>
           <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great
