--- a/index.html
+++ b/index.html
@@ -313,11 +313,7 @@
     <img class="d-block w-100 embed-responsive" src="https://lh5.googleusercontent.com/Rz2Jv-mIUW9jxHVOlHYSLgc0KoLL4fybinFKi5Qjcm-Jz8dKW7nHK_T6jTbtTZzLDZ_SSIv_=w371" alt="manfaat-milagros">
   </div>
   
-  <div style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
-    <h5>LEGALITAS PRODUK</h5>
-  </div>
-  
-  <div class="arrow_box"><h6 style="text-align: center">Sertifikat Manajemen Mutu</h6></div>
+  <div class="arrow_box"><h5 style="text-align: center">LEGALITAS PRODUK</h5></div>
   <br/>
   <br/>
     
@@ -364,31 +360,38 @@
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh3.googleusercontent.com/P_iJ0RQITaGi2w1jG2Dgh6En9oeGVc4381-ljKYuq_OUuxi2dtATaf3_lVog846UNMCHhCWC=w371);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
+          <h2>Sertifikat Halal MUI</h2>
+          <!--
           <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great
             on any device, whether
             it's a phone, tablet, or desktop the page will behave responsively!</p>
+          -->
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url(https://lh4.googleusercontent.com/UFK-cwxBcWdm9J0TKXvt_9cHM6SwUeEsvew-WXq_IlNPvpZlKW5A1pU1VAS9EG--XaK2DK4Ag_pAlDPl5mbfxSFpCZ-qi14_O3WvjFj-3yaLtLeBMDte=w371);"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in
-            mobile responsive web development!
-            All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <h2>Hasil Uji Laboraturium</h2>
+          <p class="lead mb-0">SUCOFINDO
+            BPOM RI MD 265210001099</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh5.googleusercontent.com/7zrVI7QUamq11hY9WTvYnyrsaEUBymEPipVl2KaP8-2sStQW_jIkv4NVGzQGjNSWJrBxOkUw1IJjSMsauFB0m2z4iUcUr9H5rUmzd2kJIfN9sCGSG28=w572);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper
-            customization options.
-            Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+          <h2>ISO</h2>
+          <p class="lead mb-0">140088-ABICS-ISO9001</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh5.googleusercontent.com/7m92g5sw8-ZfNpOge8nP7KcIVSeqS-GAkZ0XoYEcxGtHAn8p3ur6A948t5WamFjHqNEVhh0xzHCoNBYA3YbNCH9gtuak8uTzg9M8PRqpqzzuG0HTdeU=w371);"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>SNI NO : 01-3553-2006</h2>
+          <!--
+          <p class="lead mb-0">140088-ABICS-ISO9001</p>
+          -->
         </div>
       </div>
     </div>
