--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
             BPOM RI MD 265210001099</p>
         </div>
       </div>
+      <!--
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh5.googleusercontent.com/7zrVI7QUamq11hY9WTvYnyrsaEUBymEPipVl2KaP8-2sStQW_jIkv4NVGzQGjNSWJrBxOkUw1IJjSMsauFB0m2z4iUcUr9H5rUmzd2kJIfN9sCGSG28=w572);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
@@ -389,11 +390,10 @@
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://lh5.googleusercontent.com/7m92g5sw8-ZfNpOge8nP7KcIVSeqS-GAkZ0XoYEcxGtHAn8p3ur6A948t5WamFjHqNEVhh0xzHCoNBYA3YbNCH9gtuak8uTzg9M8PRqpqzzuG0HTdeU=w371);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>SNI NO : 01-3553-2006</h2>
-          <!--
-          <p class="lead mb-0">140088-ABICS-ISO9001</p>
-          -->
+          <p class="lead mb-0"></p>
         </div>
       </div>
+      -->
     </div>
   </section>
 
