--- a/index.html
+++ b/index.html
@@ -396,7 +396,12 @@
       -->
     </div>
   </section>
-
+  
+  <div class="text-center">
+    <a href="https://wa.orderlink.in/no/6289674198193">
+      <img src="https://lh4.googleusercontent.com/r8rvJfytGOJLG8KOQzD9dpTouqg_o0c7u51qyJ1RFvy9JvHPeJjQW-Zvpgn37v7CYWfFlV_9I0UBIN6AkK5Decw3xp1_1RcDgm8tswZD1QUDXQIAdR4=w773" width="200" height="40" title="daftar" alt="tombol_daftar"></a>
+  </div>
+    
   <!--    //////////////////////////// Testimonials ////////////////////////////////   -->
   <section class="testimonials text-center bg-light">
     <div class="container">
