--- a/index.html
+++ b/index.html
@@ -401,6 +401,18 @@
     <a href="https://wa.orderlink.in/no/6289674198193">
       <img src="https://lh4.googleusercontent.com/r8rvJfytGOJLG8KOQzD9dpTouqg_o0c7u51qyJ1RFvy9JvHPeJjQW-Zvpgn37v7CYWfFlV_9I0UBIN6AkK5Decw3xp1_1RcDgm8tswZD1QUDXQIAdR4=w773" width="200" height="40" title="daftar" alt="tombol_daftar"></a>
   </div>
+  
+  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+      <h5>PELUANG DAHSYAT MENJADI DISTRIBUTOR MILAGROS</h5>
+  </div>
+  
+  <div class="text-center">
+    <img class="d-block w-100 embed-responsive" src="https://lh4.googleusercontent.com/lr8PnOO_s71GZoxQ-o8PabEdRKNSwHZ-KrB8SvowTQVGagw-U5u0rIW-ZyRqQBSrD_xXG039BZ8zndAU_Q3oLQep79EBev4rNbUd7VvO6fubr-AnX_Y=w1075" alt="benefit-milagros">
+  </div>
+  
+  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+    <p>Saat bergabung besama kami di Milagros Miracle Water Anda siap-siap mendapatkan 5 benefit berikut sekaligus</p>
+  </div>
     
   <!--    //////////////////////////// Testimonials ////////////////////////////////   -->
   <section class="testimonials text-center bg-light">
