--- a/index.html
+++ b/index.html
@@ -411,7 +411,18 @@
   </div>
   
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
-    <p>Saat bergabung besama kami di Milagros Miracle Water Anda siap-siap mendapatkan 5 benefit berikut sekaligus</p>
+    <p>Saat bergabung besama kami di Milagros Miracle Water Anda siap-siap mendapatkan 5 benefit berikut sekaligus, <br/>
+      <h5>Investasi Sekali Untuk Selamanya</h5>
+          Untuk dapat melibatkan diri Anda ke dalam program “Milagros CRP”, Anda cukup mendaftarkan diri Anda satu kali saja dan keanggotaan Anda akan berlaku selamanya.
+      <h5>Discount Produk</h5>
+          Perusahaan memberikan discount/ potongan harga atas produk-produk yang di distribusikannya kepada setiap member “Milagros CRP”.
+      <h5>Lisensi Bisnis</h5>
+          Lisensi adalah izin yang diberikan oleh perusahaan kepada member “Milagros CRP” untuk menikmati manfaat ekonomi dari kegiatan perusahaan.
+      <h5>Virtual Office</h5>
+          Virtual Office adalah sebuah kantor maya yang dibuat secara khusus oleh perusahaan bagi para member Milagros CRP dan berfungsi untuk menyediakan segala informasi yang dibutuhkan dalam menjalankan program ini.
+      <h5>Income Bisa Diwariskan</h5>
+          Mengukir sebuah prestasi dalam program “Milagros CRP” adalah menciptakan sebuah prasasti, karena apa yang telah Anda rintis dapat Anda sertakan pada daftar asset yang dapat diwariskan kepada generasi penerus Anda.
+    </p>
   </div>
     
   <!--    //////////////////////////// Testimonials ////////////////////////////////   -->
