--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
   
   <div class="text-center">
     <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://lh4.googleusercontent.com/r8rvJfytGOJLG8KOQzD9dpTouqg_o0c7u51qyJ1RFvy9JvHPeJjQW-Zvpgn37v7CYWfFlV_9I0UBIN6AkK5Decw3xp1_1RcDgm8tswZD1QUDXQIAdR4=w773" width="200" height="40" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://lh4.googleusercontent.com/r8rvJfytGOJLG8KOQzD9dpTouqg_o0c7u51qyJ1RFvy9JvHPeJjQW-Zvpgn37v7CYWfFlV_9I0UBIN6AkK5Decw3xp1_1RcDgm8tswZD1QUDXQIAdR4=w773" width="200" height="45" title="daftar" alt="tombol_daftar"></a>
   </div>
   
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
@@ -413,16 +413,28 @@
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
     <p>Saat bergabung besama kami di Milagros Miracle Water Anda siap-siap mendapatkan 5 benefit berikut sekaligus, <br/>
       <h5>Investasi Sekali Untuk Selamanya</h5>
-          Untuk dapat melibatkan diri Anda ke dalam program “Milagros CRP”, Anda cukup mendaftarkan diri Anda satu kali saja dan keanggotaan Anda akan berlaku selamanya.
+          Untuk dapat melibatkan diri Anda ke dalam program “Milagros CRP”, Anda cukup mendaftarkan diri Anda satu kali saja dan keanggotaan Anda akan berlaku selamanya. <br/>
       <h5>Discount Produk</h5>
-          Perusahaan memberikan discount/ potongan harga atas produk-produk yang di distribusikannya kepada setiap member “Milagros CRP”.
+          Perusahaan memberikan discount/ potongan harga atas produk-produk yang di distribusikannya kepada setiap member “Milagros CRP”. <br/>
       <h5>Lisensi Bisnis</h5>
-          Lisensi adalah izin yang diberikan oleh perusahaan kepada member “Milagros CRP” untuk menikmati manfaat ekonomi dari kegiatan perusahaan.
+          Lisensi adalah izin yang diberikan oleh perusahaan kepada member “Milagros CRP” untuk menikmati manfaat ekonomi dari kegiatan perusahaan. <br/>
       <h5>Virtual Office</h5>
-          Virtual Office adalah sebuah kantor maya yang dibuat secara khusus oleh perusahaan bagi para member Milagros CRP dan berfungsi untuk menyediakan segala informasi yang dibutuhkan dalam menjalankan program ini.
+          Virtual Office adalah sebuah kantor maya yang dibuat secara khusus oleh perusahaan bagi para member Milagros CRP dan berfungsi untuk menyediakan segala informasi yang dibutuhkan dalam menjalankan program ini. <br/>
       <h5>Income Bisa Diwariskan</h5>
           Mengukir sebuah prestasi dalam program “Milagros CRP” adalah menciptakan sebuah prasasti, karena apa yang telah Anda rintis dapat Anda sertakan pada daftar asset yang dapat diwariskan kepada generasi penerus Anda.
     </p>
+  </div>
+  
+  <div class="arrow_box"><h5 style="text-align: center">TESTIMONIALS</h5></div>
+  <br/>
+  <br/>
+  
+  <div class="text-center"> 
+    <iframe width="360" height="240" src="https://youtube.com/embed/YkQc-7MCAeU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  
+  <div class="text-center"> 
+    <iframe width="360" height="240" src="https://youtube.com/embed/4rB7IRrQftw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
     
   <!--    //////////////////////////// Testimonials ////////////////////////////////   -->
