--- a/index.html
+++ b/index.html
@@ -414,12 +414,16 @@
     <p>Saat bergabung besama kami di Milagros Miracle Water Anda siap-siap mendapatkan 5 benefit berikut sekaligus, <br/>
       <h5>Investasi Sekali Untuk Selamanya</h5>
           Untuk dapat melibatkan diri Anda ke dalam program “Milagros CRP”, Anda cukup mendaftarkan diri Anda satu kali saja dan keanggotaan Anda akan berlaku selamanya. <br/>
+          <br/>
       <h5>Discount Produk</h5>
           Perusahaan memberikan discount/ potongan harga atas produk-produk yang di distribusikannya kepada setiap member “Milagros CRP”. <br/>
+          <br/>
       <h5>Lisensi Bisnis</h5>
           Lisensi adalah izin yang diberikan oleh perusahaan kepada member “Milagros CRP” untuk menikmati manfaat ekonomi dari kegiatan perusahaan. <br/>
+          <br/>
       <h5>Virtual Office</h5>
           Virtual Office adalah sebuah kantor maya yang dibuat secara khusus oleh perusahaan bagi para member Milagros CRP dan berfungsi untuk menyediakan segala informasi yang dibutuhkan dalam menjalankan program ini. <br/>
+          <br/>
       <h5>Income Bisa Diwariskan</h5>
           Mengukir sebuah prestasi dalam program “Milagros CRP” adalah menciptakan sebuah prasasti, karena apa yang telah Anda rintis dapat Anda sertakan pada daftar asset yang dapat diwariskan kepada generasi penerus Anda.
     </p>
@@ -435,6 +439,33 @@
   
   <div class="text-center"> 
     <iframe width="360" height="240" src="https://youtube.com/embed/4rB7IRrQftw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  
+  <div class="arrow_box"><h5 style="text-align: center">Marketing Plan MILAGROS</h5></div>
+  <br/>
+  <br/>
+  
+  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+    <ol>
+      <li>Bonus RO</li>
+          <p>Bonus Eceran (Rp. 50.000)
+             Bonus Eceran atau bonus penjualan langsung adalah selisih antara harga jual konsumen 
+             dengan harga perolehan produk. Besarnya nilai bonus eceran ini adalah Rp. 50.000 (Rp. 350.000 – Rp. 300.000).</p> <br/>
+          <br/>
+      <li>Bonus Jaringan (22%)</li>
+          <p>Bonus Jaringan adalah bonus yang dihitung berdasarkan omset RO pribadi 
+             dan omset RO Grup yang disponsori. Adapun syarat untuk memperoleh Bonus Jaringan adalah 
+             dengan cara melakukan RO minimal 1 paket RO dan memenuhi kualifikasi omset.</p> <br/>
+          <br/>
+      <li>Lisensi Bisnis</li>
+          Lisensi adalah izin yang diberikan oleh perusahaan kepada member “Milagros CRP” untuk menikmati manfaat ekonomi dari kegiatan perusahaan. <br/>
+          <br/>
+      <li>Virtual Office</li>
+          Virtual Office adalah sebuah kantor maya yang dibuat secara khusus oleh perusahaan bagi para member Milagros CRP dan berfungsi untuk menyediakan segala informasi yang dibutuhkan dalam menjalankan program ini. <br/>
+          <br/>
+      <li>Income Bisa Diwariskan</li>
+          Mengukir sebuah prestasi dalam program “Milagros CRP” adalah menciptakan sebuah prasasti, karena apa yang telah Anda rintis dapat Anda sertakan pada daftar asset yang dapat diwariskan kepada generasi penerus Anda.
+    </ol>
   </div>
     
   <!--    //////////////////////////// Testimonials ////////////////////////////////   -->
