--- a/index.html
+++ b/index.html
@@ -450,18 +450,18 @@
       <li>Bonus RO</li>
           <p>Bonus Eceran (Rp. 50.000)
              Bonus Eceran atau bonus penjualan langsung adalah selisih antara harga jual konsumen 
-             dengan harga perolehan produk. Besarnya nilai bonus eceran ini adalah Rp. 50.000 (Rp. 350.000 – Rp. 300.000).</p> <br/>
+             dengan harga perolehan produk. Besarnya nilai bonus eceran ini adalah Rp. 50.000 (Rp. 350.000 – Rp. 300.000).</p>
       <li>Bonus Jaringan (22%)</li>
           <p>Bonus Jaringan adalah bonus yang dihitung berdasarkan omset RO pribadi 
              dan omset RO Grup yang disponsori. Adapun syarat untuk memperoleh Bonus Jaringan adalah 
-             dengan cara melakukan RO minimal 1 paket RO dan memenuhi kualifikasi omset.</p> <br/>
+             dengan cara melakukan RO minimal 1 paket RO dan memenuhi kualifikasi omset.</p>
       <li>Bonus Kepemimpinan (3%)</li>
           <p>Bonus Kepempinan adalah bonus yang diperuntukkan kepada para member 
              yang telah meraih peringkat tertentu (minimal Executive Leader) 
              dan berhasil membimbing downline-nya untuk juga mencapai peringkat tertentu 
              (minimal Executive Leader). Adapun syarat untuk memperoleh Bonus Kepemimpinan adalah 
              dengan cara melakukan RO minimal 1 paket RO dan memenuhi persyaratan yang diberlakukan 
-             pada Bonus Jaringan serta memiliki side volume minimal ¼ dari syarat Bonus Jaringan.</p> <br/>
+             pada Bonus Jaringan serta memiliki side volume minimal ¼ dari syarat Bonus Jaringan.</p>
       <li>Executive Leader (1%+0.5%)</li>
           <p>Ketika Anda telah mencapai peringkat qualifed Executive Leader dan berhasil membantu 
              minimal 1 orang downline generasi pertama untuk memenuhi kualifikasi sebagai Executive Leader, 
@@ -469,24 +469,24 @@
              sebesar 1% dari downline tingkat pertama yang qualified Executive Leader dan 0.5% dari downline tingkat kedua yang qualified Executive Leader 
              (dihitung berdasarkan total RO dari setiap tingkatan).
              Total RO seorang qualified Executive Leader tidak termasuk Total RO dari downline yang juga berperingkat qualified Executive Leader. 
-          </p> <br/>
+          </p>
       <li>Manager (0.75%)</li>
           <p>Apabila Anda telah mencapai peringkat qualified Manager dan memenuhi kualifikasi yang telah ditetapkan, 
              maka Anda berhak menikmati bonus Manager sebesar 1%, 0.5%, dan 0.75%.
              Selain menikmati penghasilan 1% dan 0.5% dari downline qualified Executive Leader tingkat pertama dan tingkat kedua 
              (seperti penghasilan yang dinikmati oleh qualified Executive Leader), qualified Manager juga memperoleh bonus sebanyak 0.75% 
              dari Personal Group RO (PGRO) Executive Leader generasi kedua yang berada di bawah downline Anda yang juga berperingkat qualified Manager. 
-          </p><br/>
+          </p>
       <li>Director (0.75%)</li>
           <p>Apabila Anda telah mencapai peringkat Director dan memenuhi kualifikasi yang telah ditetapkan, 
              maka Anda berhak menikmati bonus Director sebesar 1%, 0.5%, 0.75% dan 0.75%.
              Sebagai seorang qualified Director, Anda juga berhak atas bonus Manager sebesar 0.75% dari PGRO downline qualified Executive Leader tingkat ke dua hingga satu tingkat di bawah downline Anda yang berperingkat qualified Manager.
              Seorang Director juga akan menerima bonus kepemimpinan Director sebesar 0.75% dari PGRO yang dihitung mulai dari downline qualified Executive Leader tingkat kedua hingga satu generasi di bawah downline Anda yang juga berperingkat qualified Director.
-          <p/><br/>
+          <p/>
       <li>Bonus Sharing Omzet (2%)</li>
           <p>Perusahaan menganggarkan dana sebesar 2% dari total omset bulanan bagi para member yang berhasil meraih peringkat qualified Executive Leader ke atas. Adapun perincian untuk masing-masing peringkat adalah sebagai berikut:
              Adapun syarat untuk memperoleh Bonus Sharing Omzet adalah dengan cara melakukan RO min. 1 paket RO dan memenuhi persyaratan Omset Main Volume Minimum dan Omset Side Volume Minimum sebagaimana tertera pada tabel diatas.
-          </p><br/>
+          </p>
       <li>Bonus Reward (3%)</li>
           <p>Impian untuk melakukan pesiar dan memiliki mobil atau rumah baru dapat mulai Anda wujudkan pada saat Anda meraih peringkat tertentu dalam menjalankan usaha ini. Penghargaan ini diberikan secara terus menerus, bukan hanya satu kali. Perusahaan akan mengalokasikan 3% dari total omset perusahaan untuk membiayai keperluan ini.
              Bonus Reward untuk peringkat Leaders Club adalah paket pesiar ke luar negeri dan dibagikan setiap 3 bulan sekali. Sedangkan Bonus untuk peringkat Executive Leader ke atas adalah berupa dana kepemilikan rumah dan mobil yang dibagikan setiap 1 tahun sekali. <br/>
