--- a/index.html
+++ b/index.html
@@ -455,6 +455,9 @@
           <p>Bonus Jaringan adalah bonus yang dihitung berdasarkan omset RO pribadi 
              dan omset RO Grup yang disponsori. Adapun syarat untuk memperoleh Bonus Jaringan adalah 
              dengan cara melakukan RO minimal 1 paket RO dan memenuhi kualifikasi omset.</p>
+          <div class="text-center">
+             <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/-nB09hM1XSY5VVDAVrjKSfoCAxWDS9wQe1md4yxhlqhrKycZ0IUylT9-e9wGKx80QbIyXU_Bo1HtFOdrYEyOCB1mb2IS9K4vmwY0LkVnrE1vU3nquC0=w773" alt="manfaat-milagros">
+          </div>
       <li>Bonus Kepemimpinan (3%)</li>
           <p>Bonus Kepempinan adalah bonus yang diperuntukkan kepada para member 
              yang telah meraih peringkat tertentu (minimal Executive Leader) 
