--- a/index.html
+++ b/index.html
@@ -456,8 +456,9 @@
              dan omset RO Grup yang disponsori. Adapun syarat untuk memperoleh Bonus Jaringan adalah 
              dengan cara melakukan RO minimal 1 paket RO dan memenuhi kualifikasi omset.</p>
           <div class="text-center">
-             <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/-nB09hM1XSY5VVDAVrjKSfoCAxWDS9wQe1md4yxhlqhrKycZ0IUylT9-e9wGKx80QbIyXU_Bo1HtFOdrYEyOCB1mb2IS9K4vmwY0LkVnrE1vU3nquC0=w773" alt="manfaat-milagros">
-          </div>
+             <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/-nB09hM1XSY5VVDAVrjKSfoCAxWDS9wQe1md4yxhlqhrKycZ0IUylT9-e9wGKx80QbIyXU_Bo1HtFOdrYEyOCB1mb2IS9K4vmwY0LkVnrE1vU3nquC0=w773" alt="bonus-jaringan">
+          </div> <br/>
+          <br/>
       <li>Bonus Kepemimpinan (3%)</li>
           <p>Bonus Kepempinan adalah bonus yang diperuntukkan kepada para member 
              yang telah meraih peringkat tertentu (minimal Executive Leader) 
@@ -465,17 +466,27 @@
              (minimal Executive Leader). Adapun syarat untuk memperoleh Bonus Kepemimpinan adalah 
              dengan cara melakukan RO minimal 1 paket RO dan memenuhi persyaratan yang diberlakukan 
              pada Bonus Jaringan serta memiliki side volume minimal ¼ dari syarat Bonus Jaringan.</p>
+          <div class="text-center">
+             <img class="d-block w-100 embed-responsive" src="https://lh5.googleusercontent.com/sGZsCdY60vnJAHc2ORpNMqp84_PraLN655dliwvDzvLav72UpFMTXDEHbLgONBybqrIbR4e34e2WQ100hWChdUQdZ0uq8k2JIXizSNCEHdhBagl1QWE=w1075" alt="bonus-kepemimpinan">
+          </div> <br/>
+          <br/>
       <li>Executive Leader (1%+0.5%)</li>
           <p>Ketika Anda telah mencapai peringkat qualifed Executive Leader dan berhasil membantu 
              minimal 1 orang downline generasi pertama untuk memenuhi kualifikasi sebagai Executive Leader, 
              maka Anda tidak berhak mendapatkan selisih bonus pada Bonus Jaringan, namun Anda berhak menikmati Bonus Kepemimpinan Executive Leader 
              sebesar 1% dari downline tingkat pertama yang qualified Executive Leader dan 0.5% dari downline tingkat kedua yang qualified Executive Leader 
              (dihitung berdasarkan total RO dari setiap tingkatan).
+          <div class="text-center">
+             <img class="d-block w-100 embed-responsive" src="https://lh6.googleusercontent.com/EGwTkSWWRrQZALspShwJzKFRK4EZvVW8wc1yhxkDAHpNM_4HrSJITWvXBCcJ62IHM2LTsNBhwA0GpQljR3ES5cqV7l5sDuoin7aGCp3sTmL_sezq3lvN=w1175" alt="executive-leader">
+          </div> <br/>
              Total RO seorang qualified Executive Leader tidak termasuk Total RO dari downline yang juga berperingkat qualified Executive Leader. 
           </p>
       <li>Manager (0.75%)</li>
           <p>Apabila Anda telah mencapai peringkat qualified Manager dan memenuhi kualifikasi yang telah ditetapkan, 
              maka Anda berhak menikmati bonus Manager sebesar 1%, 0.5%, dan 0.75%.
+          <div class="text-center">
+             <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/SiO8r7eRmA8FnNGltJDU425BaTVDxJ0R0FZG2bWDJakd6arvEweNugCrg98YS3bCp73PQCyyQaToJq3VZaBtjuDo0Wdyc49tGAfpEMs3zC1xXsn1jQ=w1075" alt="manager">
+          </div> <br/>
              Selain menikmati penghasilan 1% dan 0.5% dari downline qualified Executive Leader tingkat pertama dan tingkat kedua 
              (seperti penghasilan yang dinikmati oleh qualified Executive Leader), qualified Manager juga memperoleh bonus sebanyak 0.75% 
              dari Personal Group RO (PGRO) Executive Leader generasi kedua yang berada di bawah downline Anda yang juga berperingkat qualified Manager. 
@@ -483,15 +494,24 @@
       <li>Director (0.75%)</li>
           <p>Apabila Anda telah mencapai peringkat Director dan memenuhi kualifikasi yang telah ditetapkan, 
              maka Anda berhak menikmati bonus Director sebesar 1%, 0.5%, 0.75% dan 0.75%.
+          <div class="text-center">
+             <img class="d-block w-100 embed-responsive" src="https://lh4.googleusercontent.com/ZZiL8pJLL4YLuitOciZNbz9sWgRc0qK4aO43QxugBQ1xiV3NhSZt6j9AHgACNSm_TTQZFGLZFCHTenjhhj8ES0_WJA3NuQvaynnTN_Ih00HjDCdRaQ=w974" alt="director">
+          </div> <br/>
              Sebagai seorang qualified Director, Anda juga berhak atas bonus Manager sebesar 0.75% dari PGRO downline qualified Executive Leader tingkat ke dua hingga satu tingkat di bawah downline Anda yang berperingkat qualified Manager.
              Seorang Director juga akan menerima bonus kepemimpinan Director sebesar 0.75% dari PGRO yang dihitung mulai dari downline qualified Executive Leader tingkat kedua hingga satu generasi di bawah downline Anda yang juga berperingkat qualified Director.
           <p/>
       <li>Bonus Sharing Omzet (2%)</li>
           <p>Perusahaan menganggarkan dana sebesar 2% dari total omset bulanan bagi para member yang berhasil meraih peringkat qualified Executive Leader ke atas. Adapun perincian untuk masing-masing peringkat adalah sebagai berikut:
+          <div class="text-center">
+             <img class="d-block w-100 embed-responsive" src="https://lh6.googleusercontent.com/7WsaMhCZAJK2Mdse0d0FtKEBKX9MozpJkeJRCXJFndWmBzrVuZ2JPP-Wo2eJ6NJxpGboyKgVTeqoNnC-0JBDnixiQ_w1F7Fcu1x3OXC9_DoZQ8SzLD33=w773" alt="sharing-omzet">
+          </div> <br/>
              Adapun syarat untuk memperoleh Bonus Sharing Omzet adalah dengan cara melakukan RO min. 1 paket RO dan memenuhi persyaratan Omset Main Volume Minimum dan Omset Side Volume Minimum sebagaimana tertera pada tabel diatas.
           </p>
       <li>Bonus Reward (3%)</li>
           <p>Impian untuk melakukan pesiar dan memiliki mobil atau rumah baru dapat mulai Anda wujudkan pada saat Anda meraih peringkat tertentu dalam menjalankan usaha ini. Penghargaan ini diberikan secara terus menerus, bukan hanya satu kali. Perusahaan akan mengalokasikan 3% dari total omset perusahaan untuk membiayai keperluan ini.
+          <div class="text-center">
+             <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/fO4f9YlveS4QUQFulocAKNYL_HXePo3BF0Sqv_xj-0HxxAQymwxK1NrZEZMKve8CVZMTjOdgIj3UrWH18O497_9t_fKEpdjeceZSJ2M64Yis3yG8bPk=w572" alt="bonus-reward">
+          </div> <br/>
              Bonus Reward untuk peringkat Leaders Club adalah paket pesiar ke luar negeri dan dibagikan setiap 3 bulan sekali. Sedangkan Bonus untuk peringkat Executive Leader ke atas adalah berupa dana kepemilikan rumah dan mobil yang dibagikan setiap 1 tahun sekali. <br/>
              <br/>
              <i>*Adapun syarat untuk menikmati Bonus Reward adalah dengan memenuhi kualifikasi minimum omset grup sebagaimana tertera pada tabel di atas.</i>
