--- a/index.html
+++ b/index.html
@@ -518,6 +518,15 @@
           </p>
     </ol>
   </div>
+
+  <div class="text-center">
+    <a href="https://wa.orderlink.in/no/6289674198193">
+      <img src="https://lh5.googleusercontent.com/mBf5gy8TJpo8a3Gif-aoQYFQ7-7J5YHX-wULMt4n6hPOvosTTpY_j2ua3KZ3rsZ5GIyBcUZRauxSH23poOGwPY2F-fpwXzkYiNheEmgvm0ZOIZxwsA=w1075" width="200" height="45" title="daftar" alt="tombol_daftar"></a>
+  </div>
+
+  <div class="arrow_box"><h5 style="text-align: center">Tiga Pilihan Investasi Program Milagros</h5></div>
+  <br/>
+  <br/>
     
   <!--    //////////////////////////// Testimonials ////////////////////////////////   -->
   <section class="testimonials text-center bg-light">
