--- a/index.html
+++ b/index.html
@@ -521,12 +521,23 @@
 
   <div class="text-center">
     <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://lh5.googleusercontent.com/mBf5gy8TJpo8a3Gif-aoQYFQ7-7J5YHX-wULMt4n6hPOvosTTpY_j2ua3KZ3rsZ5GIyBcUZRauxSH23poOGwPY2F-fpwXzkYiNheEmgvm0ZOIZxwsA=w1075" width="200" height="45" title="daftar" alt="tombol_daftar"></a>
-  </div>
+      <img src="https://lh5.googleusercontent.com/mBf5gy8TJpo8a3Gif-aoQYFQ7-7J5YHX-wULMt4n6hPOvosTTpY_j2ua3KZ3rsZ5GIyBcUZRauxSH23poOGwPY2F-fpwXzkYiNheEmgvm0ZOIZxwsA=w1075" width="280" height="80" title="daftar" alt="tombol_daftar"></a>
+  </div> <br/>
+  <br/>
 
   <div class="arrow_box"><h5 style="text-align: center">Tiga Pilihan Investasi Program Milagros</h5></div>
   <br/>
   <br/>
+
+  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+     <div class="text-center">
+       <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/REY7FXbg2HO6of6a3VhNsge17NacZqhkFqZkTHoGH3oblN9Gej6hJmoToTcmo0aCXpFDfVz_tgrdah69OIR25Yvu7XNEccrxp-DQhLEdgA2oZi43Dw=w773" alt="satu-lisensi">
+     </div>
+      <h5>1 Lisensi</h5>
+      <p style="text-align: center;">
+        Untuk bergabung dengan pilihan ini, nilai investasi yang dibutuhkan adalah Rp. 350.000. Atas investasi ini Anda berhak memperoleh 1 Lisensi dan 1 paket produk. Adapun potensi bonus pasangan Anda dengan pilihan ini adalah Rp. 240.000 per hari atau Rp. 7.200.000 per bulan.
+      </p>
+  </div>
     
   <!--    //////////////////////////// Testimonials ////////////////////////////////   -->
   <section class="testimonials text-center bg-light">
